Cherry-pick r280424. rdar://problem/81286934

[macOS Catalina] Some feature preferences have wrong default values
    https://bugs.webkit.org/show_bug.cgi?id=228564

    Reviewed by Tim Horton.

    When `HAVE(SYSTEM_FEATURE_FLAGS)` is false, we still need to enable
    some features by default.

    This patch makes sure the following features are enabled by default
    on macOS (consistent with the properties in WebKit-macos.plist):
    - async_frame_and_overflow_scrolling
    - gpu_process_canvas_rendering
    - gpu_process_media
    - gpu_process_webrtc
    - incremental_pdf
    - vp9_decoder
    - webm_format_reader
    - webm_parser

    * Shared/WebPreferencesDefaultValues.cpp:
    (WebKit::defaultUseGPUProcessForCanvasRenderingEnabled):
    (WebKit::defaultUseGPUProcessForDOMRenderingEnabled):
    (WebKit::defaultUseGPUProcessForMediaEnabled):
    (WebKit::defaultCaptureAudioInGPUProcessEnabled):
    (WebKit::defaultCaptureVideoInGPUProcessEnabled):
    (WebKit::defaultWebRTCCodecsInGPUProcess):
    (WebKit::defaultIncrementalPDFEnabled):
    (WebKit::defaultWebMFormatReaderEnabled):

    Canonical link: https://commits.webkit.org/240064@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280424 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/239676.16@safari-612.1.24.11-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.24.11-branch@280442 268f45cc-cd09-0410-ab3c-d52691b4dbfc